# corosensei-linking-bug-reproduction

./: Cargo.toml  flake.nix
.github/workflows/: build.yaml
src/: lib.rs  main.rs
