[package]
name = "corosensei-arm-linking-bug-reproduction"
version = "0.1.0"
edition = "2021"

[lib]
name = "example_lib"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# corosensei = "0.2"
wasmer-vm = { git = "https://github.com/wasmerio/wasmer", rev = "688cf64faba9c2420829cfbe94c0835c097c507c" }
